# quant_playground

./: .gitignore  .pylintrc  pyproject.toml
quant_playground/: BetaNeutralCryptoPortfolio.ipynb
quant_playground/drafts/: BetaBasedPriceMovement.ipynb  BetaNeutralCryptoPortfolio.ipynb  CorrPairTrading.ipynb
quant_playground/src/DataManager/: data_manager.py
quant_playground/src/Indicators/: indicators.py
