[tool.poetry]
name = "quant-playground"
version = "0.1.0"
description = ""
authors = ["rukawa917 <chriskang960723@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
numpy = "^2.0.0"
cvxpy = "^1.5.2"
pyarrow = "^16.1.0"
matplotlib = "^3.9.0"
scikit-learn = "^1.5.0"
statsmodels = "^0.14.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
