[tool.poetry]
name = "quant-playground"
version = "0.1.0"
description = ""
authors = ["rukawa917 <chriskang960723@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
vectorbt = "^0.26.1"
cvxpy = "^1.5.2"
fire = "^0.6.0"
pyarrow = "^16.1.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
